[gd_scene load_steps=2 format=3 uid="uid://jt71xkocspj6"]

[ext_resource type="Script" path="res://Game.gd" id="1_mrcjd"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_mrcjd")

[node name="Button" type="Button" parent="."]
offset_right = 146.0
offset_bottom = 31.0
text = "Draw From Deck2"

[node name="Button2" type="Button" parent="."]
offset_left = 5.0
offset_top = 618.0
offset_right = 151.0
offset_bottom = 649.0
text = "Draw From Deck1"

[node name="Button3" type="Button" parent="."]
offset_left = 1003.0
offset_top = 1.0
offset_right = 1149.0
offset_bottom = 32.0
text = "Back To Menu"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 1003.0
offset_top = 42.0
offset_right = 1153.0
offset_bottom = 74.0
placeholder_text = "Search For Card"

[node name="TextEdit3" type="TextEdit" parent="."]
offset_left = 97.0
offset_top = 564.0
offset_right = 147.0
offset_bottom = 606.0
text = "5"
placeholder_text = "RP"

[node name="TextEdit4" type="TextEdit" parent="."]
offset_left = 6.0
offset_top = 566.0
offset_right = 56.0
offset_bottom = 608.0
text = "20"
placeholder_text = "HP"

[node name="TextEdit2" type="TextEdit" parent="."]
offset_left = 94.0
offset_top = 43.0
offset_right = 144.0
offset_bottom = 85.0
text = "5"
placeholder_text = "RP"

[node name="TextEdit5" type="TextEdit" parent="."]
offset_left = 1071.0
offset_top = 598.0
offset_right = 1121.0
offset_bottom = 640.0
text = "1"
placeholder_text = "Turn"

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 9.0
offset_top = 44.0
offset_right = 59.0
offset_bottom = 86.0
text = "20"
placeholder_text = "HP"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 325)

[node name="Label2" type="Label" parent="."]
offset_left = 161.0
offset_top = 618.0
offset_right = 201.0
offset_bottom = 641.0

[node name="Label" type="Label" parent="."]
offset_left = 151.0
offset_top = 1.0
offset_right = 191.0
offset_bottom = 24.0

[node name="Label3" type="Label" parent="."]
offset_left = 468.0
offset_top = 307.0
offset_right = 679.0
offset_bottom = 333.0
text = "CHOOSE CARDS TO ATTACK"

[node name="Button4" type="Button" parent="."]
offset_left = 1071.0
offset_top = 307.0
offset_right = 1139.0
offset_bottom = 338.0
text = "ATTACK"

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
